# worm_to_ebook

./: README.md  README.rst  contents.html  make_worm_epub.py  pyproject.toml  requirements.txt  soupHtml5lib.html  soupHtmlParser.html  soupLxml.html  test.epub
src/worm_to_ebook/: __init__.py
tests/: test_get_book.py  test_get_functions.py  test_worm_to_ebook.py
worm_to_ebook/: __init__.py  epub_utils.py  get_book.py  get_book_functions.py  get_functions.py  getnextchatpermethod.py  make_ebook.py  tryandparsecontents.py
