[tool.poetry]
name = "worm_to_ebook"
version = "0.3.0"
description = ""
authors = ["icb <ian.cody.burnet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.1"
requests = "^2.24.0"
lxml = "^4.5.2"
ebooklib = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
